[package]
name = "lustblock"
version = "0.1.0"
edition = "2021"

[dependencies]
http-mitm-proxy = { path = "./src/http-mitm-proxy" }
clap = { version = "4.4.16", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = "1.34.0"
tokio-native-tls = "0.3.1"
rcgen = { version = "0.13.1", features = ["x509-parser"] }
ort = { version = "2.0.0-rc.2", features = ["cuda", "load-dynamic"] }
image = "0.25"
ndarray = "0.16"
hyper = { version = "=1.0.1", features = ["http1", "http2", "server", "client"] }
http-body-util = "0.1.0"
bytes = "1.7.1"
rand = "0.8.5"
